added basic parameters and icons, image

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600;700;800&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -6,16 +6,16 @@
 
 @layer base {
   body {
-    @apply text-sm leading-normal font-normal font-kanit
+    @apply text-sm leading-normal font-normal font-kanit bg-grey
   }
 
   #app {
-    @apply flex flex-col w-full min-h-screen
+    @apply flex flex-col w-full min-h-screen;
   }
 }
 
-@layer components{
-  .container{
-    @apply w-full max-w-3xl mx-auto px-5
+@layer components {
+  .container {
+    @apply w-full max-w-3xl mx-auto px-5;
   }
 }
