added modal and upgraded more things

--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,6 @@
 	}
 
 	.overlay {
-		@apply fixed top-0 left-0 w-full min-h-screen bg-black/50 z-40;
+		@apply fixed top-0 left-0 w-full min-h-screen bg-black/50 z-40 flex items-center justify-center;
 	}
 }
